@@ -261,6 +261,8 @@ Bug fixes:
   (report and fix by Patrick Star)
 - PR#7036: Module alias is not taken into account when checking module
   type compatibility (in a class type) (Jacques Garrigue)
+- PR#7039: Unix.getsockname returns garbage for unnamed PF_UNIX sockets
+  (Xavier Leroy)
 - GPR#205: Clear caml_backtrace_last_exn before registering as root
   (report and fix by Frederic Bour)
 - GPR#220: minor -dsource error on recursive modules
